# segment

./: Cargo.toml  LICENSE-MIT  README.md
benches/: serialize.rs
examples/: builder.rs
segment/: Cargo.toml
segment-derive/: Cargo.toml
segment-derive/src/: lib.rs
segment/benches/: serialize.rs
segment/src/: lib.rs
segment/tests/: metric_tests.rs
src/: lib.rs
